--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	"prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Devbrain\\UI\\": "src/"
+            "Devbrain\\Ui\\": "src/"
         }
     },
 	"authors": [
