--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -3,7 +3,7 @@ services:
         autowire: true
         autoconfigure: true
 
-    Devbrain\UI\:
+    Devbrain\Ui\:
         resource: '../../'
         exclude:
             - '../../DependencyInjection/'
